# split_fasta_by_sum_seq_len

./: README.md  get_fastqc_reports_parallel.sh  pyproject.toml  split_fasta_by_sum_seq_len.py
